--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,18 @@ services:
     environment:
       # ALLOW_EMPTY_PASSWORD is recommended only for development.
       - ALLOW_EMPTY_PASSWORD=yes
-      - MARIADB_USER=bn_myapp
-      - MARIADB_DATABASE=bitnami_myapp
-  myapp:
+      - MARIADB_USER=lynix
+      - MARIADB_DATABASE=lynix_web
+  laravel:
     image: docker.io/bitnami/laravel:9
     ports:
       - '8000:8000'
     environment:
       - DB_HOST=mariadb
       - DB_PORT=3306
-      - DB_USERNAME=bn_myapp
-      - DB_DATABASE=bitnami_myapp
+      - DB_USERNAME=lynix
+      - DB_DATABASE=lynix_web
     volumes:
-      - './my-project:/app'
+      - './lynix.ca:/app'
     depends_on:
       - mariadb
